kustomize/example_with_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openpgp-ca
  labels:
    app.kubernetes.io/name: openpgp-ca
  annotations:
    kubernetes.io/ingress.class: nginx # Use Nginx Ingress Controller
    cert-manager.io/cluster-issuer: letsencrypt # Get certificate using Cert-Manager
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "mtls/mtls-certs" # Location of MTLS Certificate
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
spec:
  tls:
    - hosts:
      - openpgp-ca.example.com
      secretName: opepgp-ca-tls
  rules:
    - host: openpgp-ca.example.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: openpgp-ca
              servicePort: http
